--- a/app.json
+++ b/app.json
@@ -1,16 +1,16 @@
 {
   "expo": {
-    "name": "EgyBest",
-    "slug": "egybest",
+    "name": "StreamFlix",
+    "slug": "streamflix",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "egybest",
+    "scheme": "streamflix",
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.egybest.app"
+      "bundleIdentifier": "com.streamflix.app"
     },
     "android": {
       "adaptiveIcon": {
@@ -19,7 +19,7 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.egybest.app"
+      "package": "com.streamflix.app"
     },
     "web": {
       "output": "single",
