--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "@expo-google-fonts/nunito": "^0.4.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-clipboard/clipboard": "github:react-native-clipboard/clipboard",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/native-stack": "^7.3.16",
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.4",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
     "expo": "^54.0.23",
@@ -38,6 +40,7 @@
     "expo-image": "~3.0.10",
     "expo-linear-gradient": "^15.0.8",
     "expo-linking": "~8.0.8",
+    "expo-screen-orientation": "^9.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
