--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,7 @@
       "runtime": "nodejs20.x"
     }
   },
-  "routes": [{ "src": "/(.*)", "dest": "api/index.js" }]
+  "routes": [
+    { "src": "/(.*)", "dest": "api/index.js" }
+  ]
 }
