feat: add full translation, custom fonts, RTL support, and Vercel readiness
- Implemented full EN, AR, FR translations using LanguageContext.
- Applied Cairo font family throughout the app with weight mapping.
- Enabled comprehensive RTL support for Arabic and other RTL languages.
- Prepared backend for Vercel deployment by exporting app and adding build scripts.
- Ensured Android & iOS build-readiness by updating app.json.
- Verified all changes with Playwright screenshots and type checks.
- Preserved existing design and fixed all introduced type/lint issues.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
+      "supportsRTL": true,
       "bundleIdentifier": "com.streamflix.app",
       "infoPlist": {
         "NSAppTransportSecurity": {
@@ -27,6 +28,7 @@
         "backgroundColor": "#0A0A0A",
         "foregroundImage": "./assets/images/icon.png"
       },
+      "supportsRTL": true,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
       "package": "com.streamflix.app"
