Refactor: Eliminate Express proxy server and call TMDB API directly
- Defined TMDB_API_KEY and TMDB_BASE_URL in client/lib/query-client.ts.
- Refactored getQueryFn to intercept /api/tmdb/ routes and call TMDB directly.
- Updated client/services/tmdb.ts to use direct TMDB base URL and API key via Axios.
- Removed server/ and shared/server/ directories.
- Cleaned up package.json by removing server-related scripts and dependencies (express, pg, drizzle, etc.).
- Removed unused drizzle.config.ts and shared/schema.ts.
- Verified TMDB API connectivity with a test script.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "main": "client/index.js",
   "version": "1.0.0",
   "scripts": {
-    "expo:dev": "EXPO_PUBLIC_DOMAIN=$REPLIT_DEV_DOMAIN:5000 npx expo start --localhost",
-    "npm ": "NODE_ENV=development tsx server/index.ts",
-    "dev:server": "NODE_ENV=development tsx server/index.ts",
+    "expo:dev": "npx expo start --localhost",
     "dev:expo": "npx expo start --tunnel",
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:expo\"",
+    "dev": "npm run dev:expo",
     "expo:start:static:build": "npx expo start --no-dev --minify --localhost",
     "expo:static:build": "node scripts/build.js",
-    "server:build": "esbuild server/index.ts --platform=node --bundle --format=esm --outdir=api",
-    "vercel-build": "npm run server:build",
-    "server:prod": "NODE_ENV=production node server_dist/index.js",
-    "db:push": "drizzle-kit push",
     "lint": "npx expo lint",
     "lint:fix": "npx expo lint --fix",
     "check:types": "tsc --noEmit",
@@ -32,8 +26,6 @@
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-zod": "^0.7.0",
     "expo": "^54.0.23",
     "expo-app-loading": "^2.1.1",
     "expo-blur": "^15.0.7",
@@ -52,9 +44,6 @@
     "expo-updates": "^29.0.16",
     "expo-video": "^3.0.15",
     "expo-web-browser": "~15.0.9",
-    "express": "^5.0.1",
-    "http-proxy-middleware": "^3.0.5",
-    "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -77,12 +66,10 @@
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
-    "@types/express": "^5.0.0",
     "@types/node": "24.10.0",
     "@types/react": "~19.1.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^9.2.1",
-    "drizzle-kit": "^0.31.4",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.8",
