--- a/app.json
+++ b/app.json
@@ -1,17 +1,17 @@
 {
   "expo": {
-    "name": "StreamFlix",
-    "slug": "streamflix",
+    "name": "EgyBest",
+    "slug": "egybest",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "streamflix",
+    "scheme": "egybest",
     "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
       "supportsRTL": true,
-      "bundleIdentifier": "com.streamflix.app",
+      "bundleIdentifier": "com.egybest.live.app",
       "infoPlist": {
         "NSAppTransportSecurity": {
           "NSExceptionDomains": {
