Fix Android font issues and optimize app size
- Updated `ThemedText.tsx` to handle font weight mapping to Cairo custom fonts.
- Stripped `fontWeight` from styles to prevent Android from falling back to system fonts.
- Migrated all components and screens to use the new `weight` prop in `ThemedText`.
- Enabled Hermes engine in `app.json` for Android optimization.
- Removed unused dependencies: `@expo-google-fonts/nunito`, `expo-app-loading`, `@react-native-clipboard/clipboard`, `expo-symbols`, and `react-native-worklets`.
- Cleaned up unused variables and fixed linting issues.

These changes ensure custom fonts work correctly on Android and reduce the app bundle size. Binary size reduction (from ~108MB) will be visible in production builds (AAB/APK) which exclude Expo dev tools.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>

--- a/app.json
+++ b/app.json
@@ -31,7 +31,8 @@
       "supportsRTL": true,
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.streamflix.app"
+      "package": "com.streamflix.app",
+      "jsEngine": "hermes"
     },
     "web": {
       "output": "single",
