--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^17.2.3",
     "expo": "^54.0.23",
     "expo-blur": "^15.0.7",
+    "expo-cli": "^5.3.0",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
     "expo-glass-effect": "~0.1.6",
@@ -50,9 +51,9 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
     "tsx": "^4.20.6",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
