--- a/package.json
+++ b/package.json
@@ -24,22 +24,22 @@
     "@tanstack/react-query": "^5.90.7",
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
-    "expo": "^54.0.23",
-    "expo-blur": "^15.0.7",
+    "expo": "~54.0.33",
+    "expo-blur": "~15.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.9",
-    "expo-glass-effect": "~0.1.6",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
+    "expo-glass-effect": "~0.1.8",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
     "expo-linear-gradient": "^15.0.8",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.11",
     "expo-screen-orientation": "^9.0.8",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
     "expo-updates": "^29.0.16",
     "expo-video": "^3.0.15",
-    "expo-web-browser": "~15.0.9",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -50,9 +50,10 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.15.1",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.0",
-    "react-native-webview": "^13.16.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "tsx": "^4.20.6",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
