ota updates active

--- a/app.json
+++ b/app.json
@@ -55,6 +55,11 @@
     ],
     "experiments": {
       "reactCompiler": true
+    },
+    "updates": {
+      "enabled": true,
+      "checkAutomatically": "ON_LOAD",
+      "fallbackToCacheTimeout": 0
     }
   }
 }
