--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "format": "prettier --write \"**/*.{js,ts,tsx,css,json}\""
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
@@ -25,22 +25,22 @@
     "axios": "^1.13.4",
     "dotenv": "^17.2.3",
     "expo": "^54.0.23",
-    "expo-blur": "^15.0.7",
+    "expo-blur": "~15.0.8",
     "expo-cli": "^5.3.0",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.9",
-    "expo-glass-effect": "~0.1.6",
-    "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.10",
-    "expo-linear-gradient": "^15.0.8",
-    "expo-linking": "~8.0.8",
-    "expo-screen-orientation": "^9.0.8",
-    "expo-splash-screen": "~31.0.10",
-    "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.8",
-    "expo-updates": "^29.0.16",
-    "expo-video": "^3.0.15",
-    "expo-web-browser": "~15.0.9",
+    "expo-constants": "~18.0.13",
+    "expo-font": "~14.0.11",
+    "expo-glass-effect": "~0.1.8",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-screen-orientation": "~9.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-system-ui": "~6.0.9",
+    "expo-updates": "~29.0.16",
+    "expo-video": "~3.0.15",
+    "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
@@ -52,17 +52,18 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-web": "~0.21.0",
+    "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "tsx": "^4.20.6",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "expo-navigation-bar": "~5.0.10"
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
     "@types/node": "24.10.0",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^9.2.1",
     "eslint": "^9.25.0",
