--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 
 # dependencies
 node_modules/
-
-# Expo
+data.json
+# Expo 
 .expo/
 dist/
 web-build/
@@ -32,6 +32,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+
 
 # typescript
 *.tsbuildinfo
