--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "dotenv": "^17.2.3",
     "expo": "^54.0.23",
     "expo-blur": "~15.0.8",
-    "expo-cli": "^5.3.0",
+    "expo-cli": "^4.9.1",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
     "expo-glass-effect": "~0.1.8",
@@ -34,6 +34,7 @@
     "expo-image": "~3.0.11",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-navigation-bar": "~5.0.10",
     "expo-screen-orientation": "~9.0.8",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -57,13 +58,15 @@
     "tsx": "^4.20.6",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
-    "zod-validation-error": "^3.4.0",
-    "expo-navigation-bar": "~5.0.10"
+    "zod-validation-error": "^3.4.0"
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "24.10.0",
-    "@types/react": "~19.1.10",
+    "@types/react": "^19.1.17",
+    "@types/react-dom": "^18.2.14",
+    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^9.2.1",
     "eslint": "^9.25.0",
