--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "dotenv": "^17.2.3",
     "expo": "^54.0.23",
     "expo-blur": "~15.0.8",
-    "expo-cli": "^4.9.1",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.11",
     "expo-glass-effect": "~0.1.8",
@@ -55,6 +54,7 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "tsx": "^4.20.6",
     "ws": "^8.18.0",
     "zod": "^3.24.2",
@@ -66,7 +66,6 @@
     "@types/node": "24.10.0",
     "@types/react": "^19.1.17",
     "@types/react-dom": "^18.2.14",
-    "@types/react-native": "^0.72.8",
     "babel-plugin-module-resolver": "^5.0.2",
     "concurrently": "^9.2.1",
     "eslint": "^9.25.0",
