--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-updates": "~29.0.16",
     "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
+    "expo-build-properties": "~0.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
